tests/fixtures/compile_errors/break_without_loop_2.fe
contract Foo:

    pub def bar():
        if true:
            break